// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`currentAnnotationAlgorithm — preset snapshots > absolem.json 1`] = `
{
  "assignments": {
    "0": null,
    "1": "2,0",
    "10": "2,3",
    "11": "3,3",
    "12": "1,3",
    "13": "0,3",
    "14": "?,?",
    "15": "2,4",
    "16": "1,4",
    "17": "4,4",
    "18": "5,4",
    "19": "5,5",
    "2": "1,0",
    "20": "4,5",
    "21": "1,5",
    "22": "2,5",
    "23": "3,6",
    "24": "0,6",
    "25": "1,6",
    "26": "3,7",
    "27": "2,7",
    "28": "0,7",
    "29": "1,7",
    "3": "0,0",
    "30": "1,8",
    "31": "0,8",
    "32": "?,?",
    "33": "1,9",
    "34": "0,9",
    "35": "1,10",
    "36": "2,10",
    "4": "1,1",
    "5": "0,1",
    "6": "?,?",
    "7": "1,2",
    "8": "?,?",
    "9": "0,2",
  },
  "status": "partial",
  "warningKinds": [
    "fallback",
  ],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > ansi-104.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,2",
    "10": "0,12",
    "100": "5,16",
    "101": "5,17",
    "102": "5,19",
    "103": "5,20",
    "11": "0,13",
    "12": "0,14",
    "13": "0,15",
    "14": "0,16",
    "15": "0,17",
    "16": "1,0",
    "17": "1,1",
    "18": "1,2",
    "19": "1,3",
    "2": "0,3",
    "20": "1,4",
    "21": "1,5",
    "22": "1,6",
    "23": "1,7",
    "24": "1,8",
    "25": "1,9",
    "26": "1,10",
    "27": "1,11",
    "28": "1,12",
    "29": "1,13",
    "3": "0,4",
    "30": "1,15",
    "31": "1,16",
    "32": "1,17",
    "33": "1,18",
    "34": "1,19",
    "35": "1,20",
    "36": "1,21",
    "37": "2,0",
    "38": "2,1",
    "39": "2,2",
    "4": "0,5",
    "40": "2,3",
    "41": "2,4",
    "42": "2,5",
    "43": "2,6",
    "44": "2,7",
    "45": "2,8",
    "46": "2,9",
    "47": "2,10",
    "48": "2,11",
    "49": "2,12",
    "5": "0,6",
    "50": "2,13",
    "51": "2,15",
    "52": "2,16",
    "53": "2,17",
    "54": "2,18",
    "55": "2,19",
    "56": "2,20",
    "57": "3,21",
    "58": "3,0",
    "59": "3,1",
    "6": "0,7",
    "60": "3,2",
    "61": "3,3",
    "62": "3,4",
    "63": "3,5",
    "64": "3,6",
    "65": "3,7",
    "66": "3,8",
    "67": "3,9",
    "68": "3,10",
    "69": "3,11",
    "7": "0,8",
    "70": "3,13",
    "71": "3,18",
    "72": "3,19",
    "73": "3,20",
    "74": "4,0",
    "75": "4,2",
    "76": "4,3",
    "77": "4,4",
    "78": "4,5",
    "79": "4,6",
    "8": "0,9",
    "80": "4,7",
    "81": "4,8",
    "82": "4,9",
    "83": "4,10",
    "84": "4,11",
    "85": "4,13",
    "86": "4,16",
    "87": "4,18",
    "88": "4,19",
    "89": "4,20",
    "9": "0,11",
    "90": "5,21",
    "91": "5,0",
    "92": "5,1",
    "93": "5,2",
    "94": "5,6",
    "95": "5,10",
    "96": "5,11",
    "97": "5,12",
    "98": "5,13",
    "99": "5,15",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > ansi-104-big-ass-enter.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,2",
    "10": "0,12",
    "100": "5,16",
    "101": "5,17",
    "102": "5,19",
    "103": "5,20",
    "11": "0,13",
    "12": "0,14",
    "13": "0,15",
    "14": "0,16",
    "15": "0,17",
    "16": "1,0",
    "17": "1,1",
    "18": "1,2",
    "19": "1,3",
    "2": "0,3",
    "20": "1,4",
    "21": "1,5",
    "22": "1,6",
    "23": "1,7",
    "24": "1,8",
    "25": "1,9",
    "26": "1,10",
    "27": "1,11",
    "28": "1,12",
    "29": "1,13",
    "3": "0,4",
    "30": "1,14",
    "31": "1,15",
    "32": "1,16",
    "33": "1,17",
    "34": "1,18",
    "35": "1,19",
    "36": "1,20",
    "37": "1,21",
    "38": "2,0",
    "39": "2,1",
    "4": "0,5",
    "40": "2,2",
    "41": "2,3",
    "42": "2,4",
    "43": "2,5",
    "44": "2,6",
    "45": "2,7",
    "46": "2,8",
    "47": "2,9",
    "48": "2,10",
    "49": "2,11",
    "5": "0,6",
    "50": "2,12",
    "51": "3,13",
    "52": "2,15",
    "53": "2,16",
    "54": "2,17",
    "55": "2,18",
    "56": "2,19",
    "57": "2,20",
    "58": "3,21",
    "59": "3,0",
    "6": "0,7",
    "60": "3,1",
    "61": "3,2",
    "62": "3,3",
    "63": "3,4",
    "64": "3,5",
    "65": "3,6",
    "66": "3,7",
    "67": "3,8",
    "68": "3,9",
    "69": "3,10",
    "7": "0,8",
    "70": "3,11",
    "71": "3,18",
    "72": "3,19",
    "73": "3,20",
    "74": "4,0",
    "75": "4,2",
    "76": "4,3",
    "77": "4,4",
    "78": "4,5",
    "79": "4,6",
    "8": "0,9",
    "80": "4,7",
    "81": "4,8",
    "82": "4,9",
    "83": "4,10",
    "84": "4,11",
    "85": "4,13",
    "86": "4,16",
    "87": "4,18",
    "88": "4,19",
    "89": "4,20",
    "9": "0,11",
    "90": "5,21",
    "91": "5,0",
    "92": "5,1",
    "93": "5,2",
    "94": "5,6",
    "95": "5,10",
    "96": "5,11",
    "97": "5,12",
    "98": "5,13",
    "99": "5,15",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > atreus.json 1`] = `
{
  "assignments": {
    "0": "0,2",
    "1": "0,1",
    "10": "2,2",
    "11": "2,1",
    "12": "2,3",
    "13": "2,0",
    "14": "3,4",
    "15": "4,5",
    "16": "3,2",
    "17": "3,1",
    "18": "3,3",
    "19": "3,0",
    "2": "0,3",
    "20": "4,4",
    "21": "0,9",
    "22": "0,10",
    "23": "0,8",
    "24": "0,11",
    "25": "1,7",
    "26": "1,9",
    "27": "1,10",
    "28": "1,8",
    "29": "1,11",
    "3": "0,0",
    "30": "2,7",
    "31": "2,9",
    "32": "2,10",
    "33": "2,8",
    "34": "2,11",
    "35": "3,7",
    "36": "4,6",
    "37": "3,9",
    "38": "3,10",
    "39": "3,8",
    "4": "1,4",
    "40": "3,11",
    "41": "4,7",
    "5": "1,2",
    "6": "1,1",
    "7": "1,3",
    "8": "1,0",
    "9": "2,4",
  },
  "status": "success",
  "warningKinds": [
    "fallback",
  ],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > default-60.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,10",
    "11": "0,11",
    "12": "0,12",
    "13": "0,13",
    "14": "1,0",
    "15": "1,1",
    "16": "1,2",
    "17": "1,3",
    "18": "1,4",
    "19": "1,5",
    "2": "0,2",
    "20": "1,6",
    "21": "1,7",
    "22": "1,8",
    "23": "1,9",
    "24": "1,10",
    "25": "1,11",
    "26": "1,12",
    "27": "1,13",
    "28": "2,0",
    "29": "2,1",
    "3": "0,3",
    "30": "2,2",
    "31": "2,3",
    "32": "2,4",
    "33": "2,5",
    "34": "2,6",
    "35": "2,7",
    "36": "2,8",
    "37": "2,9",
    "38": "2,10",
    "39": "2,11",
    "4": "0,4",
    "40": "2,13",
    "41": "3,0",
    "42": "3,2",
    "43": "3,3",
    "44": "3,4",
    "45": "3,5",
    "46": "3,6",
    "47": "3,7",
    "48": "3,8",
    "49": "3,9",
    "5": "0,5",
    "50": "3,10",
    "51": "3,11",
    "52": "3,13",
    "53": "4,0",
    "54": "4,1",
    "55": "4,2",
    "56": "4,6",
    "57": "4,10",
    "58": "4,11",
    "59": "4,12",
    "6": "0,6",
    "60": "4,13",
    "7": "0,7",
    "8": "0,8",
    "9": "0,9",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > ergodox.json 1`] = `
{
  "assignments": {
    "0": "0,3",
    "1": "0,14",
    "10": "0,0",
    "11": "0,1",
    "12": "0,16",
    "13": "0,17",
    "14": "1,3",
    "15": "1,14",
    "16": "1,2",
    "17": "1,4",
    "18": "1,13",
    "19": "1,15",
    "2": "0,2",
    "20": "1,5",
    "21": "1,6",
    "22": "1,11",
    "23": "1,12",
    "24": "1,0",
    "25": "1,1",
    "26": "1,16",
    "27": "1,17",
    "28": "2,3",
    "29": "2,14",
    "3": "0,4",
    "30": "2,2",
    "31": "2,4",
    "32": "2,13",
    "33": "2,15",
    "34": "2,5",
    "35": "2,12",
    "36": "2,0",
    "37": "2,1",
    "38": "2,16",
    "39": "2,17",
    "4": "0,13",
    "40": "3,6",
    "41": "3,11",
    "42": "3,3",
    "43": "3,14",
    "44": "3,2",
    "45": "3,4",
    "46": "3,13",
    "47": "3,15",
    "48": "3,5",
    "49": "3,12",
    "5": "0,15",
    "50": "3,0",
    "51": "3,1",
    "52": "3,16",
    "53": "3,17",
    "54": "4,3",
    "55": "4,14",
    "56": "4,2",
    "57": "4,4",
    "58": "4,13",
    "59": "4,15",
    "6": "0,5",
    "60": "4,0",
    "61": "4,1",
    "62": "4,16",
    "63": "4,17",
    "64": "3,7",
    "65": "3,8",
    "66": "4,6",
    "67": "4,7",
    "68": "4,8",
    "69": "5,8",
    "7": "0,6",
    "70": "3,9",
    "71": "3,10",
    "72": "4,9",
    "73": "4,10",
    "74": "4,11",
    "75": "5,9",
    "8": "0,11",
    "9": "0,12",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > iso-60.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,10",
    "11": "0,11",
    "12": "0,12",
    "13": "0,13",
    "14": "1,0",
    "15": "1,1",
    "16": "1,2",
    "17": "1,3",
    "18": "1,4",
    "19": "1,5",
    "2": "0,2",
    "20": "1,6",
    "21": "1,7",
    "22": "1,8",
    "23": "1,9",
    "24": "1,10",
    "25": "1,11",
    "26": "1,12",
    "27": "1,13",
    "28": "2,0",
    "29": "2,1",
    "3": "0,3",
    "30": "2,2",
    "31": "2,3",
    "32": "2,4",
    "33": "2,5",
    "34": "2,6",
    "35": "2,7",
    "36": "2,8",
    "37": "2,9",
    "38": "2,10",
    "39": "2,11",
    "4": "0,4",
    "40": "2,12",
    "41": "3,0",
    "42": "3,1",
    "43": "3,2",
    "44": "3,3",
    "45": "3,4",
    "46": "3,5",
    "47": "3,6",
    "48": "3,7",
    "49": "3,8",
    "5": "0,5",
    "50": "3,9",
    "51": "3,10",
    "52": "3,11",
    "53": "3,13",
    "54": "4,0",
    "55": "4,1",
    "56": "4,2",
    "57": "4,6",
    "58": "4,10",
    "59": "4,11",
    "6": "0,6",
    "60": "4,12",
    "61": "4,13",
    "7": "0,7",
    "8": "0,8",
    "9": "0,9",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > iso-105.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,2",
    "10": "0,12",
    "100": "5,15",
    "101": "5,16",
    "102": "5,17",
    "103": "5,19",
    "104": "5,20",
    "11": "0,13",
    "12": "0,14",
    "13": "0,15",
    "14": "0,16",
    "15": "0,17",
    "16": "1,0",
    "17": "1,1",
    "18": "1,2",
    "19": "1,3",
    "2": "0,3",
    "20": "1,4",
    "21": "1,5",
    "22": "1,6",
    "23": "1,7",
    "24": "1,8",
    "25": "1,9",
    "26": "1,10",
    "27": "1,11",
    "28": "1,12",
    "29": "1,13",
    "3": "0,4",
    "30": "1,15",
    "31": "1,16",
    "32": "1,17",
    "33": "1,18",
    "34": "1,19",
    "35": "1,20",
    "36": "1,21",
    "37": "2,0",
    "38": "2,1",
    "39": "2,2",
    "4": "0,5",
    "40": "2,3",
    "41": "2,4",
    "42": "2,5",
    "43": "2,6",
    "44": "2,7",
    "45": "2,8",
    "46": "2,9",
    "47": "2,10",
    "48": "2,11",
    "49": "2,12",
    "5": "0,6",
    "50": "3,13",
    "51": "2,15",
    "52": "2,16",
    "53": "2,17",
    "54": "2,18",
    "55": "2,19",
    "56": "2,20",
    "57": "3,21",
    "58": "3,0",
    "59": "3,1",
    "6": "0,7",
    "60": "3,2",
    "61": "3,3",
    "62": "3,4",
    "63": "3,5",
    "64": "3,6",
    "65": "3,7",
    "66": "3,8",
    "67": "3,9",
    "68": "3,10",
    "69": "3,11",
    "7": "0,8",
    "70": "3,12",
    "71": "3,18",
    "72": "3,19",
    "73": "3,20",
    "74": "4,0",
    "75": "4,1",
    "76": "4,2",
    "77": "4,3",
    "78": "4,4",
    "79": "4,5",
    "8": "0,9",
    "80": "4,6",
    "81": "4,7",
    "82": "4,8",
    "83": "4,9",
    "84": "4,10",
    "85": "4,11",
    "86": "4,13",
    "87": "4,16",
    "88": "4,18",
    "89": "4,19",
    "9": "0,11",
    "90": "4,20",
    "91": "5,21",
    "92": "5,0",
    "93": "5,1",
    "94": "5,2",
    "95": "5,6",
    "96": "5,10",
    "97": "5,11",
    "98": "5,12",
    "99": "5,13",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > keychron-q1.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,10",
    "11": "0,11",
    "12": "0,12",
    "13": "0,14",
    "14": "0,15",
    "15": "1,0",
    "16": "1,1",
    "17": "1,2",
    "18": "1,3",
    "19": "1,4",
    "2": "0,2",
    "20": "1,5",
    "21": "1,6",
    "22": "1,7",
    "23": "1,8",
    "24": "1,9",
    "25": "1,10",
    "26": "1,11",
    "27": "1,12",
    "28": "1,13",
    "29": "1,15",
    "3": "0,3",
    "30": "2,0",
    "31": "2,1",
    "32": "2,2",
    "33": "2,3",
    "34": "2,4",
    "35": "2,5",
    "36": "2,6",
    "37": "2,7",
    "38": "2,8",
    "39": "2,9",
    "4": "0,4",
    "40": "2,10",
    "41": "2,11",
    "42": "2,12",
    "43": "2,13",
    "44": "2,15",
    "45": "3,0",
    "46": "3,1",
    "47": "3,2",
    "48": "3,3",
    "49": "3,4",
    "5": "0,5",
    "50": "3,5",
    "51": "3,6",
    "52": "3,7",
    "53": "3,8",
    "54": "3,9",
    "55": "3,10",
    "56": "3,11",
    "57": "3,13",
    "58": "3,15",
    "59": "4,0",
    "6": "0,6",
    "60": "4,2",
    "61": "4,3",
    "62": "4,4",
    "63": "4,5",
    "64": "4,6",
    "65": "4,7",
    "66": "4,8",
    "67": "4,9",
    "68": "4,10",
    "69": "4,11",
    "7": "0,7",
    "70": "4,12",
    "71": "4,14",
    "72": "5,0",
    "73": "5,1",
    "74": "5,2",
    "75": "5,6",
    "76": "5,10",
    "77": "5,11",
    "78": "5,12",
    "79": "5,13",
    "8": "0,8",
    "80": "5,14",
    "81": "5,15",
    "9": "0,9",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > kinesis-advantage.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,12",
    "11": "?,?",
    "12": "0,13",
    "13": "0,14",
    "14": "0,15",
    "15": "?,?",
    "16": "0,16",
    "17": "0,17",
    "18": "1,3",
    "19": "1,4",
    "2": "0,2",
    "20": "1,5",
    "21": "1,6",
    "22": "1,11",
    "23": "1,12",
    "24": "1,13",
    "25": "1,14",
    "26": "1,1",
    "27": "1,2",
    "28": "1,15",
    "29": "1,16",
    "3": "0,3",
    "30": "2,3",
    "31": "2,4",
    "32": "2,5",
    "33": "2,6",
    "34": "2,11",
    "35": "2,12",
    "36": "2,13",
    "37": "2,14",
    "38": "2,1",
    "39": "2,2",
    "4": "?,?",
    "40": "2,15",
    "41": "2,16",
    "42": "3,3",
    "43": "3,4",
    "44": "3,5",
    "45": "3,6",
    "46": "3,11",
    "47": "3,12",
    "48": "3,13",
    "49": "3,14",
    "5": "0,4",
    "50": "3,1",
    "51": "3,2",
    "52": "3,15",
    "53": "3,16",
    "54": "4,3",
    "55": "4,4",
    "56": "4,5",
    "57": "4,6",
    "58": "4,11",
    "59": "4,12",
    "6": "0,5",
    "60": "4,13",
    "61": "4,14",
    "62": "4,1",
    "63": "4,2",
    "64": "4,15",
    "65": "4,16",
    "66": "5,3",
    "67": "5,4",
    "68": "5,5",
    "69": "5,12",
    "7": "0,6",
    "70": "5,13",
    "71": "5,14",
    "72": "5,2",
    "73": "5,15",
    "74": "4,7",
    "75": "4,8",
    "76": "5,6",
    "77": "5,7",
    "78": "5,8",
    "79": "6,8",
    "8": "?,?",
    "80": "4,9",
    "81": "4,10",
    "82": "5,9",
    "83": "5,10",
    "84": "5,11",
    "85": "6,9",
    "9": "0,11",
  },
  "status": "partial",
  "warningKinds": [
    "fallback",
    "duplicate",
  ],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > multilayout-60-via.json 1`] = `
{
  "assignments": {
    "0": "0,2",
    "1": "0,3",
    "10": "0,12",
    "11": "0,13",
    "12": "0,14",
    "13": "0,16",
    "14": "0,17",
    "15": "0,18",
    "16": "1,2",
    "17": "1,4",
    "18": "1,5",
    "19": "1,6",
    "2": "0,4",
    "20": "1,7",
    "21": "1,8",
    "22": "1,9",
    "23": "1,10",
    "24": "1,11",
    "25": "1,12",
    "26": "1,13",
    "27": "1,14",
    "28": "1,15",
    "29": "1,16",
    "3": "0,5",
    "30": "1,18",
    "31": "2,2",
    "32": "2,4",
    "33": "2,5",
    "34": "2,6",
    "35": "2,7",
    "36": "2,8",
    "37": "2,9",
    "38": "2,10",
    "39": "2,11",
    "4": "0,6",
    "40": "2,12",
    "41": "2,13",
    "42": "2,14",
    "43": "2,15",
    "44": "2,17",
    "45": "3,0",
    "46": "3,1",
    "47": "3,3",
    "48": "3,4",
    "49": "3,5",
    "5": "0,7",
    "50": "3,6",
    "51": "3,7",
    "52": "3,8",
    "53": "3,9",
    "54": "3,10",
    "55": "3,11",
    "56": "3,12",
    "57": "3,13",
    "58": "3,15",
    "59": "3,17",
    "6": "0,8",
    "60": "3,18",
    "61": "4,2",
    "62": "4,3",
    "63": "4,5",
    "64": "4,8",
    "65": "4,12",
    "66": "4,13",
    "67": "4,15",
    "68": "4,16",
    "69": "5,2",
    "7": "0,9",
    "70": "5,4",
    "71": "5,5",
    "72": "5,9",
    "73": "5,13",
    "74": "5,15",
    "75": "5,16",
    "76": null,
    "77": "6,4",
    "78": "6,5",
    "79": "6,9",
    "8": "0,10",
    "80": "6,13",
    "81": "6,15",
    "82": null,
    "9": "0,11",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > ortho-4-12-qmk.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,10",
    "11": "0,11",
    "12": "1,0",
    "13": "1,1",
    "14": "1,2",
    "15": "1,3",
    "16": "1,4",
    "17": "1,5",
    "18": "1,6",
    "19": "1,7",
    "2": "0,2",
    "20": "1,8",
    "21": "1,9",
    "22": "1,10",
    "23": "1,11",
    "24": "2,0",
    "25": "2,1",
    "26": "2,2",
    "27": "2,3",
    "28": "2,4",
    "29": "2,5",
    "3": "0,3",
    "30": "2,6",
    "31": "2,7",
    "32": "2,8",
    "33": "2,9",
    "34": "2,10",
    "35": "2,11",
    "36": "3,0",
    "37": "3,1",
    "38": "3,2",
    "39": "3,3",
    "4": "0,4",
    "40": "3,4",
    "41": "3,5",
    "42": "?,?",
    "43": "3,6",
    "44": "3,7",
    "45": "3,8",
    "46": "3,9",
    "47": "3,10",
    "48": "3,11",
    "5": "0,5",
    "6": "0,6",
    "7": "0,7",
    "8": "0,8",
    "9": "0,9",
  },
  "status": "partial",
  "warningKinds": [
    "fallback",
  ],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > planck.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,1",
    "10": "0,10",
    "11": "0,11",
    "12": "1,0",
    "13": "1,1",
    "14": "1,2",
    "15": "1,3",
    "16": "1,4",
    "17": "1,5",
    "18": "1,6",
    "19": "1,7",
    "2": "0,2",
    "20": "1,8",
    "21": "1,9",
    "22": "1,10",
    "23": "1,11",
    "24": "2,0",
    "25": "2,1",
    "26": "2,2",
    "27": "2,3",
    "28": "2,4",
    "29": "2,5",
    "3": "0,3",
    "30": "2,6",
    "31": "2,7",
    "32": "2,8",
    "33": "2,9",
    "34": "2,10",
    "35": "2,11",
    "36": "3,0",
    "37": "3,1",
    "38": "3,2",
    "39": "3,3",
    "4": "0,4",
    "40": "3,4",
    "41": "3,5",
    "42": "3,7",
    "43": "3,8",
    "44": "3,9",
    "45": "3,10",
    "46": "3,11",
    "5": "0,5",
    "6": "0,6",
    "7": "0,7",
    "8": "0,8",
    "9": "0,9",
  },
  "status": "success",
  "warningKinds": [],
}
`;

exports[`currentAnnotationAlgorithm — preset snapshots > symbolics-spacecadet.json 1`] = `
{
  "assignments": {
    "0": "0,0",
    "1": "0,2",
    "10": "0,20",
    "11": "0,22",
    "12": "1,0",
    "13": "1,1",
    "14": "1,2",
    "15": "1,4",
    "16": "1,5",
    "17": "1,6",
    "18": "1,7",
    "19": "1,8",
    "2": "0,4",
    "20": "1,9",
    "21": "1,10",
    "22": "1,11",
    "23": "1,12",
    "24": "1,13",
    "25": "1,14",
    "26": "1,15",
    "27": "1,16",
    "28": "1,18",
    "29": "1,19",
    "3": "0,6",
    "30": "1,20",
    "31": "1,22",
    "32": "1,23",
    "33": "2,0",
    "34": "2,1",
    "35": "2,2",
    "36": "2,4",
    "37": "2,5",
    "38": "2,6",
    "39": "2,7",
    "4": "0,8",
    "40": "2,8",
    "41": "2,9",
    "42": "2,10",
    "43": "2,11",
    "44": "2,12",
    "45": "2,13",
    "46": "2,14",
    "47": "2,15",
    "48": "2,16",
    "49": "2,17",
    "5": "0,10",
    "50": "2,18",
    "51": "2,20",
    "52": "2,22",
    "53": "2,23",
    "54": "3,0",
    "55": "3,2",
    "56": "3,4",
    "57": "3,5",
    "58": "3,6",
    "59": "3,7",
    "6": "0,12",
    "60": "3,8",
    "61": "3,9",
    "62": "3,10",
    "63": "3,11",
    "64": "3,12",
    "65": "3,13",
    "66": "3,14",
    "67": "3,15",
    "68": "3,17",
    "69": "3,18",
    "7": "0,14",
    "70": "3,20",
    "71": "3,22",
    "72": "4,0",
    "73": "4,1",
    "74": "4,2",
    "75": "4,4",
    "76": "4,6",
    "77": "4,7",
    "78": "4,8",
    "79": "4,9",
    "8": "0,16",
    "80": "4,10",
    "81": "4,11",
    "82": "4,12",
    "83": "4,13",
    "84": "4,14",
    "85": "4,15",
    "86": "4,16",
    "87": "4,18",
    "88": "4,20",
    "89": "4,21",
    "9": "0,18",
    "90": "4,23",
    "91": "5,0",
    "92": "5,1",
    "93": "5,3",
    "94": "5,10",
    "95": "5,16",
    "96": "5,19",
    "97": "5,21",
    "98": "5,22",
    "99": "5,4",
  },
  "status": "success",
  "warningKinds": [],
}
`;
